--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
+tmp
 backend/tmp
 backend/backend
+backend/backend.exe
 backend/public
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
